# tl-translate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  translate.manifest
code/: escape_string.h  main.cpp  tl_all_languages.txt  tl_begin_macro.txt  tl_end_macro.txt  translate.cpp  translate.h  translate_get_index.h  translation_context.cpp  translation_context.h  translation_parser.cpp  translation_parser.h
code/core/: RWops.cpp  RWops.h  asan_helper.cpp  asan_helper.h  assert.cpp  assert.h  breakpoint.h  cvar.cpp  cvar.h  global.cpp  global.h  global_pch.h  global_stub.h  stacktrace.h  stacktrace_libbacktrace.cpp  stacktrace_shared.cpp  stacktrace_win32.cpp
code/datastructures/: BS_stream.cpp  BS_stream.h  event_listener_observer.cpp  event_listener_observer.h  linklist.h
code/util/: escape_string.h  fnv1a_hash.h  string_tools.h  utf8_stuff.cpp  utf8_stuff.h
tools/merge-strings/: BGE-m3-Embedding.py  CMakeLists.txt  main.cpp
tools/merge-strings/test/: empty_jp.inl
translations/: english_ref.inl  japanese.inl  tl_all_languages.txt  tl_begin_macro.txt  tl_end_macro.txt
